Disable UseBiasedLocking, see gatling/gatling#3918